# coappbrpc

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  client  compile_client.sh  run.sh  uninstall.sh  uninstall_coappbrpc.sh
cmake/modules/: DowloadInstallPipModuleExt.cmake  FindLibcoapExt.cmake  FindProtobufExt.cmake  FindPythonModuleExt.cmake  InstallProtobufExt.cmake
documentation/html/: ClientRPC_8h_source.html  ClientStubTemplate_8cc.html  ClientStubTemplate_8h.html  ClientStubTemplate_8h_source.html  ClientStub_8h_source.html  CoapClient_8cc.html  CoapClient_8cc__incl.map  CoapClient_8cc__incl.md5  CoapClient_8h.html  CoapClient_8h__dep__incl.map  CoapClient_8h__dep__incl.md5  CoapClient_8h__incl.map  CoapClient_8h__incl.md5  CoapClient_8h_source.html  CoapCommon_8cc.html  CoapCommon_8cc__incl.map  CoapCommon_8cc__incl.md5  CoapCommon_8h.html  CoapCommon_8h__dep__incl.map  CoapCommon_8h__dep__incl.md5  CoapCommon_8h__incl.map  CoapCommon_8h__incl.md5  CoapCommon_8h_source.html  Config_8h.html  Config_8h__dep__incl.map  Config_8h__dep__incl.md5  Config_8h_source.html  ControllerRPC_8h.html  ControllerRPC_8h__dep__incl.map  ControllerRPC_8h__dep__incl.md5  ControllerRPC_8h__incl.map  ControllerRPC_8h__incl.md5  ControllerRPC_8h_source.html  HandleService_8cc.html  HandleService_8cc__incl.map  HandleService_8cc__incl.md5  HandleService_8h.html  HandleService_8h__dep__incl.map  HandleService_8h__dep__incl.md5  HandleService_8h__incl.map  (+277 more)
documentation/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  pages_0.js  pages_2.js  searchdata.js  variables_0.js  (+8 more)
documentation/latex/: ClientStubTemplate_8cc.tex  ClientStubTemplate_8h.tex  CoapClient_8cc.tex  CoapClient_8cc__incl.md5  CoapClient_8h.tex  CoapClient_8h__dep__incl.md5  CoapClient_8h__incl.md5  CoapCommon_8cc.tex  CoapCommon_8cc__incl.md5  CoapCommon_8h.tex  CoapCommon_8h__dep__incl.md5  CoapCommon_8h__incl.md5  Config_8h.tex  Config_8h__dep__incl.md5  ControllerRPC_8h.tex  ControllerRPC_8h__dep__incl.md5  ControllerRPC_8h__incl.md5  HandleService_8cc.tex  HandleService_8cc__incl.md5  HandleService_8h.tex  HandleService_8h__dep__incl.md5  HandleService_8h__incl.md5  Ping.tex  RpcClient_8cc.tex  RpcClient_8cc__incl.md5  RpcClient_8h.tex  RpcClient_8h__dep__incl.md5  RpcClient_8h__incl.md5  RpcMethod_8h.tex  RpcMethod_8h__dep__incl.md5  RpcMethod_8h__incl.md5  RpcServer_8cc.tex  RpcServer_8cc__incl.md5  RpcServer_8h.tex  RpcServer_8h__dep__incl.md5  RpcServer_8h__incl.md5  RpcService_8h.tex  RpcService_8h__dep__incl.md5  RpcService_8h__incl.md5  RpcServices_8h.tex  (+110 more)
example/: CMakeLists.txt  client.cpp  server.cpp
example/Add/: ping.proto.save  sum.pb.cc  sum.pb.h  sum.proto  sumServer.cc
example/Ping/: CMakeLists.txt
example/Ping/client/: CMakeLists.txt  ClientStub.hh  client.cpp
example/Ping/server/: CMakeLists.txt  server.cpp
example/cmake/modules/: FindLibcoapExt.cmake
example/helloworld/: CMakeLists.txt  client.cpp  helloworld.proto  server.cpp
example/ping/: CMakeLists.txt  ClientStub.cc  ClientStub.h  client.cpp  protofile.json  rpc_ping.pb.cc  rpc_ping.pb.h  rpc_ping.proto  server.cpp
example/proto/: CMakeLists.txt  rpc_ping.pb.h
example/src/: CMakeLists.txt  client.cpp  rpc_ping.proto  server.cpp
generator/: checkPyLibs.py  coappbrpc  coappbrpc.sh  coappbrpc.sh.x.c  coappbrpc.x.c  coappbrpcPlugin.py  cogFiles.txt
generator/templates/: ClientStubTemplate.cc  ClientStubTemplate.h  ClientStubTemplate.hh  cogFiles.txt
include/: ClientRPC.h  ClientRPC.hh  CoapClient.h  CoapClient.hh  CoapCommon.h  CoapCommon.hh  Config.h  ControllerRPC.h  ControllerRPC.hh  HandlePbrpc.hh  HandleService.h  MethodRPC.h  MethodRPC.hh  RpcClient.h  RpcMethod.h  RpcServer.h  RpcService.h  ServerRPC.h  ServerRPC.hh  ServiceManager.h  ServiceManager.hh  ServiceRPC.h  ServiceRPC.hh
proto/: CMakeLists.txt  ClientStub.cc  ClientStub.hh  MsgSchema.proto  cogFiles.txt  compileProto.sh  pbrpc.proto  protofile.json  rpc_ping.pb.cc  rpc_ping.pb.h  rpc_ping.proto
proto/templates/: ClientStubTemplate.cc
src/: CMakeLists.txt  ClientRPC.cc  ClientRPC.hh  CoapClient.cc  CoapCommon.cc  Config.h.in  HandlePbrpc.cc  HandleService.cc  RpcClient.cc  RpcServer.cc  ServerRPC.cc  ServerRPC_COAP.cc  ServerRPC_COAP.hh  ServerRPC_http.cc  ServiceManager.cc  client  client.cpp  coap_client.cc  coap_client.hh  coap_common.cc  compile_client.sh  handle_pbrpc.cc  main_http.cpp  misc
src/client/: CMakeLists.txt  ClientRPC.cc  ClientRPC.hh  ClientStub.cc  ClientStub.hh  CoapClient.cc  CoapClient.hh  ______CMakeLists.txt  client.cpp
src/common/: CMakeLists.txt  CoapCommon.cc  CoapCommon.hh
src/server/: CMakeLists.txt  ServerRPC.cc  ServerRPC.hh  ______CMakeLists.txt  handle_pbrpc.cc  handle_pbrpc.hh  server.cpp  server_cfg.h
src/service/: Ping.hh
src2/: CMakeLists.txt  ___CMakeLists.txt
src2/app/: CMakeLists.txt
src2/coappbrpc/: CMakeLists.txt
src2/coappbrpc/include/coappbrpc/: ClientRPC.hh  CoapClient.hh  ServerRPC.hh
src2/coappbrpc/src/: CoapClient.cc
src2/example/: CMakeLists.txt  server.cpp
src2/example/proto/: CMakeLists.txt
test/: CMakeLists.txt  compile.sh  compile.sh.save  run-parallel.sh  test.cpp
